--- a/style.css
+++ b/style.css
@@ -4,13 +4,21 @@ html, body {
   height: 100%;
   width: 100%;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
   color: #c2c2c2;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 main {
   min-height: 100vh;
   display: flex;
+  margin: 50px;
   align-items: center;
   justify-content: center;
   flex-direction: column;
